deploy/cicd/tekton/asdasd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: asdasd
  name: asdasd
spec:
  rules:
    - host: asdasd.com
      http:
        paths:
          - backend:
              service:
                name: el-asdasd-git-repo
                port:
                  name: port-8080
            path: /el-asdasd-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
